C6 and H2: make TWAI's interrupt-related registers/fields consistent with other chips (#372)
* C6,H2: match TWAI interrupt's register/fields names with older chips

* regenerate

* clean up and rebase

--- a/esp32h2/svd/patches/esp32h2.yaml
+++ b/esp32h2/svd/patches/esp32h2.yaml
@@ -1078,6 +1078,10 @@ TWAI0:
   _modify:
     RX_MESSAGE_COUNTER:
       name: RX_MESSAGE_CNT
+    INTERRUPT_ENABLE:
+      name: INT_ENA
+    INTERRUPT:
+      name: INT_RAW
 
   MODE:
     _modify:
@@ -1090,6 +1094,8 @@ TWAI0:
         name: TX_REQ
       RELEASE_BUFFER:
         name: RELEASE_BUF
+      SELF_RX_REQUEST:
+        name: SELF_RX_REQ
 
   STATUS:
     _modify:
@@ -1115,6 +1121,27 @@ TWAI0:
     _strip: DATA
     _prefix: TX_BYTE
 
+  ERR_CODE_CAP:
+    _modify:
+      ERR_CAPTURE_CODE_DIRECTION:
+        name: ECC_DIRECTION
+  
+  INT_ENA:
+    _modify:
+      EXT_RECEIVE_INT_ENA:
+        name: RX_INT_ENA
+      EXT_TRANSMIT_INT_ENA:
+        name: TX_INT_ENA
+      ARBITRATION_LOST_INT_ENA:
+        name: ARB_LOST_INT_ENA
+
+  INT_RAW:
+    _modify:
+      TRANSMIT_INT_ST:
+        name: TX_INT_ST
+      RECEIVE_INT_ST:
+        name: RX_INT_ST
+
 RMT:
   SYS_CONF:
     _delete:
@@ -1130,17 +1157,6 @@ RSA:
       CLEAR_INTERRUPT:
         name: INT_CLR
         access: read-write
-
-TWAI*:
-  CMD:
-    _modify:
-      SELF_RX_REQUEST:
-        name: SELF_RX_REQ
-
-  ERR_CODE_CAP:
-    _modify:
-      ERR_CAPTURE_CODE_DIRECTION:
-        name: ECC_DIRECTION
 
 I2C_ANA_MST:
   _array:
