consistently put RMT patches in patches/_rmt.yml for all chips

--- a/esp32c5/svd/patches/_rmt.yml
+++ b/esp32c5/svd/patches/_rmt.yml
@@ -1,6 +1,5 @@
 RMT:
   _delete: "RX_CH%sDATA"
-
   _modify:
     "TX_CH%sDATA":
       name: "CH%sDATA"
@@ -56,13 +55,13 @@ RMT:
       - "_CH0"
 
   SYS_CONF:
-    _delete:
-      - RMT_SCLK_DIV_NUM,
-      - RMT_SCLK_DIV_A,
-      - RMT_SCLK_DIV_B,
-      - RMT_SCLK_SEL,
-      - RMT_SCLK_ACTIVE
-    _strip: "RMT_"
+    _strip: RMT_
+    _delete: # TODO: doesn't work so far, I love svdtools <3
+      - SCLK_DIV_NUM
+      - SCLK_DIV_A
+      - SCLK_DIV_B
+      - SCLK_SEL
+      - SCLK_ACTIVE
 
   INT_RAW:
     _strip_end: "_INT_RAW"
@@ -73,10 +72,10 @@ RMT:
         name: "CH%s_RX_END"
       "TX_CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "TX_CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
@@ -93,10 +92,10 @@ RMT:
         name: "CH%s_RX_END"
       "RX_CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "RX_CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
@@ -113,10 +112,10 @@ RMT:
         name: "CH%s_RX_END"
       "CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
@@ -133,13 +132,14 @@ RMT:
         name: "CH%s_RX_END"
       "RX_CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "RX_CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
         name: "CH%s_RX_THR_EVENT"
       "CH?_TX_LOOP":
         name: "CH%s_TX_LOOP"
+
