--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -7,6 +7,7 @@ _include:
   - _i2c.yml
   - _interrupt.yml
   - _lp_io.yml
+  - _rmt.yml
   - _uart.yml
 
 PCR:
@@ -473,151 +474,6 @@ INTPRI:
     CPU_INTR_FROM_CPU_3:
       addressOffset: 0x9c
   _include: ../../../common_patches/sw_interrupts.yaml
-
-RMT:
-  _delete: "RX_CH%sDATA"
-  _modify:
-    "TX_CH%sDATA":
-      name: "CH%sDATA"
-    "TX_CH%sCONF0":
-      name: CH%s_TX_CONF0
-    "RX_CH%sCONF0":
-      dimIndex: 2-3
-      name: CH%s_RX_CONF0
-    "RX_CH%sCONF1":
-      dimIndex: 2-3
-      name: CH%s_RX_CONF1
-    "TX_CH%sSTATUS":
-      name: CH%s_TX_STATUS
-    "RX_CH%sSTATUS":
-      name: CH%s_RX_STATUS
-
-  "CH%sDATA":
-    _modify:
-      CHDATA:
-        name: DATA
-        access: read-write
-
-  "CH*CONF0":
-    _strip_end:
-      - "_CH0"
-      - "_CH2"
-  "CH*CONF1":
-    _strip_end: "_CH2"
-
-  "CH*STATUS":
-    _strip_end:
-      - "_CH0"
-      - "_CH2"
-
-  "CH*CARRIER_DUTY":
-    _strip_end:
-      - "_CH"
-
-  "CH*CARRIER_RM":
-    _strip_end:
-      - "_CH"
-
-  "CH*_TX_LIM":
-    _strip_end:
-      - "_CH"
-
-  "CH*_RX_LIM":
-    _strip_end:
-      - "_CH2"
-
-  "REF_CNT_RST":
-    _strip_end:
-      - "_CH0"
-
-  SYS_CONF:
-    _strip: RMT_
-    _delete: # TODO: doesn't work so far, I love svdtools <3
-      - SCLK_DIV_NUM
-      - SCLK_DIV_A
-      - SCLK_DIV_B
-      - SCLK_SEL
-      - SCLK_ACTIVE
-
-  INT_RAW:
-    _strip_end: "_INT_RAW"
-    _array:
-      "CH?_TX_END":
-        name: "CH%s_TX_END"
-      "CH?_RX_END":
-        name: "CH%s_RX_END"
-      "TX_CH[01]_ERR":
-        name: "CH%s_TX_ERR"
-        description: TODO
-      "TX_CH[23]_ERR":
-        name: "CH%s_RX_ERR"
-        description: TODO
-      "CH?_TX_THR_EVENT":
-        name: "CH%s_TX_THR_EVENT"
-      "CH?_RX_THR_EVENT":
-        name: "CH%s_RX_THR_EVENT"
-      "CH?_TX_LOOP":
-        name: "CH%s_TX_LOOP"
-
-  INT_ST:
-    _strip_end: "_INT_ST"
-    _array:
-      "CH?_TX_END":
-        name: "CH%s_TX_END"
-      "CH?_RX_END":
-        name: "CH%s_RX_END"
-      "RX_CH[01]_ERR":
-        name: "CH%s_TX_ERR"
-        description: TODO
-      "RX_CH[23]_ERR":
-        name: "CH%s_RX_ERR"
-        description: TODO
-      "CH?_TX_THR_EVENT":
-        name: "CH%s_TX_THR_EVENT"
-      "CH?_RX_THR_EVENT":
-        name: "CH%s_RX_THR_EVENT"
-      "CH?_TX_LOOP":
-        name: "CH%s_X_LOOP"
-
-  INT_ENA:
-    _strip_end: "_INT_ENA"
-    _array:
-      "CH?_TX_END":
-        name: "CH%s_TX_END"
-      "CH?_RX_END":
-        name: "CH%s_RX_END"
-      "CH[01]_ERR":
-        name: "CH%s_TX_ERR"
-        description: TODO
-      "CH[23]_ERR":
-        name: "CH%s_RX_ERR"
-        description: TODO
-      "CH?_TX_THR_EVENT":
-        name: "CH%s_TX_THR_EVENT"
-      "CH?_RX_THR_EVENT":
-        name: "CH%s_RX_THR_EVENT"
-      "CH?_TX_LOOP":
-        name: "CH%s_X_LOOP"
-
-  INT_CLR:
-    _strip_end: "_INT_CLR"
-    _array:
-      "CH?_TX_END":
-        name: "CH%s_TX_END"
-      "CH?_RX_END":
-        name: "CH%s_RX_END"
-      "RX_CH[01]_ERR":
-        name: "CH%s_TX_ERR"
-        description: TODO
-      "RX_CH[23]_ERR":
-        name: "CH%s_RX_ERR"
-        description: TODO
-      "CH?_TX_THR_EVENT":
-        name: "CH%s_TX_THR_EVENT"
-      "CH?_RX_THR_EVENT":
-        name: "CH%s_RX_THR_EVENT"
-      "CH?_TX_LOOP":
-        name: "CH%s_TX_LOOP"
 
 LP_WDT:
   _modify:
