Consistent names for some RMT fields (#376)
* consistently put RMT patches in patches/_rmt.yml for all chips

* c5: fix RMT SYSCONF _modify

by changing to the same thing that c6 does

* for esp32h2, esp32c6, rename CH_X_LOOP -> CH_TX_LOOP RMT fields

* h2, c6, c5: rename RMT_RX_LIM -> RX_LIM

* regenerate PACs

--- a/esp32c5/svd/patches/_rmt.yml
+++ b/esp32c5/svd/patches/_rmt.yml
@@ -1,6 +1,5 @@
 RMT:
   _delete: "RX_CH%sDATA"
-
   _modify:
     "TX_CH%sDATA":
       name: "CH%sDATA"
@@ -57,9 +56,14 @@ RMT:
     _strip_end:
       - "_CH0"
 
-  "SYS_CONF":
-    _delete: ["RMT_SCLK_DIV_NUM", "RMT_SCLK_DIV_A", "RMT_SCLK_DIV_B", "RMT_SCLK_SEL", "RMT_SCLK_ACTIVE"]
-    _strip: "RMT_"
+  SYS_CONF:
+    _delete:
+      - RMT_SCLK_DIV_NUM
+      - RMT_SCLK_DIV_A
+      - RMT_SCLK_DIV_B
+      - RMT_SCLK_SEL
+      - RMT_SCLK_ACTIVE
+    _strip: RMT_
 
   INT_RAW:
     _strip_end: "_INT_RAW"
@@ -70,10 +74,10 @@ RMT:
         name: "CH%s_RX_END"
       "TX_CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "TX_CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
@@ -90,16 +94,16 @@ RMT:
         name: "CH%s_RX_END"
       "RX_CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "RX_CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
         name: "CH%s_RX_THR_EVENT"
       "CH?_TX_LOOP":
-        name: "CH%s_TX_LOOP"
+        name: "CH%s_X_LOOP"
 
   INT_ENA:
     _strip_end: "_INT_ENA"
@@ -110,16 +114,16 @@ RMT:
         name: "CH%s_RX_END"
       "CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
         name: "CH%s_RX_THR_EVENT"
       "CH?_TX_LOOP":
-        name: "CH%s_TX_LOOP"
+        name: "CH%s_X_LOOP"
 
   INT_CLR:
     _strip_end: "_INT_CLR"
@@ -130,13 +134,14 @@ RMT:
         name: "CH%s_RX_END"
       "RX_CH[01]_ERR":
         name: "CH%s_TX_ERR"
-        description: todo
+        description: TODO
       "RX_CH[23]_ERR":
         name: "CH%s_RX_ERR"
-        description: todo
+        description: TODO
       "CH?_TX_THR_EVENT":
         name: "CH%s_TX_THR_EVENT"
       "CH?_RX_THR_EVENT":
         name: "CH%s_RX_THR_EVENT"
       "CH?_TX_LOOP":
         name: "CH%s_TX_LOOP"
+
