--- a/esp32s3/svd/patches/esp32s3.yaml
+++ b/esp32s3/svd/patches/esp32s3.yaml
@@ -85,6 +85,59 @@ _add:
             bitOffset: 0
             bitWidth: 1
             access: read-write
+  I2C_ANA_MST:
+    description: I2C_MST_ANA Peripheral
+    baseAddress: 0x6000E040
+    addressBlock:
+      - offset: 0x0
+        size: 0x0C
+        usage: "Registers"
+    registers:
+      ANA_CONF0:
+        description: "ANA_CONF0 register"
+        addressOffset: 0x0
+        size: 32
+        access: read-write
+        resetValue: 0
+        fields:
+          BBPLL_STOP_FORCE_HIGH:
+            description: "?"
+            bitOffset: 2
+            bitWidth: 1
+          BBPLL_STOP_FORCE_LOW:
+            description: "?"
+            bitOffset: 3
+            bitWidth: 1
+          BBPLL_CAL_DONE:
+            description: "?"
+            bitOffset: 24
+            bitWidth: 1
+      ANA_CONFIG:
+        description: "ANA_CONFIG register"
+        addressOffset: 0x4
+        size: 32
+        access: read-write
+        resetValue: 0
+        fields:
+          BBPLL_PD:
+            description: "Clear to enable BBPLL"
+            bitOffset: 17
+            bitWidth: 1
+          SAR:
+            description: "?"
+            bitOffset: 18
+            bitWidth: 1
+      ANA_CONFIG2:
+        description: "ANA_CONFIG2 register"
+        addressOffset: 0x8
+        size: 32
+        access: read-write
+        resetValue: 0x00
+        fields:
+          SAR_CFG2:
+            description: "?"
+            bitOffset: 16
+            bitWidth: 1
   FE:
     description: need des
     baseAddress: 0x60006000
@@ -207,11 +260,6 @@ RTC_IO:
     _strip: "PDAC1_"
   PAD_DAC2:
     _strip: "PDAC2_"
-
-RTC_CNTL:
-  PAD_HOLD:
-    _strip_end: _HOLD
-  _include: ../../../common_patches/rtc_cntl_int_strip.yaml
 
 "EFUSE,I2S0,UART0,USB_DEVICE,PERI_BACKUP":
   _include: ../../../common_patches/int_strip.yaml
