--- a/esp32s3/svd/patches/_system.yml
+++ b/esp32s3/svd/patches/_system.yml
@@ -7,6 +7,18 @@ SYSTEM:
     _modify:
       CAN_RST:
         name: TWAI_RST
+  CPU_PERI_CLK_EN:
+    _modify:
+      CLK_EN_ASSIST_DEBUG:
+        name: ASSIST_DEBUG_CLK_EN
+      CLK_EN_DEDICATED_GPIO:
+        name: DEDICATED_GPIO_CLK_EN
+  CPU_PERI_RST_EN:
+    _modify:
+      RST_EN_ASSIST_DEBUG:
+        name: ASSIST_DEBUG_RST
+      RST_EN_DEDICATED_GPIO:
+        name: DEDICATED_GPIO_RST
 
   COMB_PVT_ERR_LVT_SITE0:
     _modify:
