add i2c_ana_mst peripheral

--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -2,6 +2,7 @@ _svd: ../esp32c5.base.svd
 
 _include:
   - ../../../common_patches/plic.yaml
+  - ../../../common_patches/i2c_ana_mst.yaml
   - _date.yml
   - _gpio.yml
   - _i2c.yml
