--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -408,32 +408,14 @@ EFUSE:
 
 
 GPIO:
-  _delete: "FUNC*_IN_SEL_CFG"
-
-  _add:
-    FUNC%s_IN_SEL_CFG:
-      dim: 128
-      dimIncrement: 0x4
-      description: ""
-      addressOffset: 0x2c4
-      size: 32
-      fields:
-        IN_SEL:
-          description: ""
-          bitOffset: 0
-          bitWidth: 7
-          access: read-write
-        IN_INV_SEL:
-          description: ""
-          bitOffset: 7
-          bitWidth: 1
-          access: read-write
-        SEL:
-          description: ""
-          bitOffset: 8
-          bitWidth: 1
-          access: read-write
-
+  FUNC*_IN_SEL_CFG:
+    _modify:
+      FUNC_IN_SEL:
+        name: IN_SEL
+      FUNC_IN_INV_SEL:
+        name: IN_INV_SEL
+      SIG_IN_SEL:
+        name: SEL
   FUNC*_OUT_SEL_CFG:
     _modify:
       FUNC*_OUT_SEL:
@@ -704,7 +686,7 @@ PCNT:
   U%s_CNT:
     _strip: "PULSE_"
 
-  _include: ../../../common_patches/pcnt.yaml
+  _include: pcnt.yaml
 
 MCPWM0:
   _include: ../../../common_patches/int_strip.yaml
@@ -826,7 +808,7 @@ _modify:
     name: ASSIST_DEBUG
     description: ASSIST_DEBUG (BUS_MONITOR) Peripheral
     groupName: ASSIST_DEBUG
-  
+
   HP_SYSTEM:
     name: HP_SYS
 
