--- a/esp32h2/svd/patches/_ecc.yml
+++ b/esp32h2/svd/patches/_ecc.yml
@@ -36,3 +36,8 @@ ECC:
       dim: 8
       dimIncrement: 0x4
       size: 0x20
+
+  MULT_CONF:
+    KEY_LENGTH:
+      P192: [0, "P-192 elliptic curve"]
+      P256: [1, "P-256 elliptic curve"]
