--- a/esp32c5/svd/patches/esp32c5.yaml
+++ b/esp32c5/svd/patches/esp32c5.yaml
@@ -5,6 +5,7 @@ _include:
   - ../../../common_patches/i2c_ana_mst.yaml
   - ../../../common_patches/slc.yaml
   - _date.yml
+  - _ecc.yml
   - _gpio.yml
   - _hinf.yml
   - _ieee802154.yml
@@ -333,46 +334,6 @@ DS:
       dim: 128
       dimIncrement: 0x4
       size: 0x20
-
-ECC:
-  _modify:
-    K_MEM*:
-      dim: 12
-      dimIncrement: 0x4
-      size: 0x20
-    PX_MEM*:
-      dim: 12
-      dimIncrement: 0x4
-      size: 0x20
-    PY_MEM*:
-      dim: 12
-      dimIncrement: 0x4
-      size: 0x20
-    QX_MEM*:
-      dim: 12
-      dimIncrement: 0x4
-      size: 0x20
-    QY_MEM*:
-      dim: 12
-      dimIncrement: 0x4
-      size: 0x20
-    QZ_MEM*:
-      dim: 12
-      dimIncrement: 0x4
-      size: 0x20
-    CONF:
-      name: MULT_CONF
-  INT_RAW:
-    _strip_end: _INT_RAW
-  INT_ST:
-    _strip_end: _INT_ST
-  INT_ENA:
-    _strip_end: _INT_ENA
-  INT_CLR:
-    _strip_end: _INT_CLR
-    _modify:
-      "*":
-        modifiedWriteValues: oneToClear
 
 ECDSA:
   _modify:
